syntax = "proto3";

import "validate/validate.proto";
import "google/protobuf/empty.proto";

option go_package = "./pbusers";

package users;

service Viewer {
  rpc ViewUser (ViewUserRequest) returns (ViewUserResponse) {}
}

message ViewUserRequest {
  uint64 user_id = 1;
}

message ViewUserResponse {
  string name = 1;
  string surname = 2;
}

service Sign {
  rpc Sign (SignRequest) returns (SignResponse) {}

  rpc SignIn (SignInRequest) returns (SignInResponse) {}
  rpc SignOut (SignOutRequest) returns (google.protobuf.Empty) {}

  rpc SwitchRole (SwitchRoleRequest) returns (SignResponse) {}

  rpc SignUpStart (SignUpStartRequest) returns (SignUpStartResponse) {}
  rpc SignUpShared (SignUpSharedRequest) returns (google.protobuf.Empty) {}
  rpc SignUpSelectCategory (SignUpSelectCategoryRequest) returns (google.protobuf.Empty) {}

  rpc SignUpIdentification (SignUpIdentificationRequest) returns (google.protobuf.Empty) {}

  rpc SignUpEnd (SignUpEndRequest) returns (SignUpEndResponse) {}

  rpc RetrieveOnboarding (RetrieveOnboardingRequest) returns (RetrieveOnboardingResponse) {}

  rpc RetrieveSelectableCategories (RetrieveSelectableCategoriesRequest) returns (RetrieveSelectableCategoriesResponse) {}

  rpc ForgotPassword (ForgotPasswordRequest) returns (google.protobuf.Empty) {}
  rpc ResetPassword (ResetPasswordRequest) returns (google.protobuf.Empty) {}

}

message SignUpIdentificationRequest {
  uint64 onboarding_id = 1;
  uint64 dni = 2;

  Medic medic = 3;
  Psychologist psychologist = 4;
  Lawyer lawyer = 5;
  Attorney attorney = 6;
  EducationalInstitution educational_institution = 7;

  message Medic {
    string name = 1;
    string surname = 2;
  }

  message EducationalInstitution {
    uint64 cue = 1;
  }

  message Attorney {
    string name = 1;
    string surname = 2;
  }

  message Lawyer {
    string name = 1;
    string surname = 2;
  }

  message Psychologist {
    uint64 license = 1;
  }
}


message SignUpSelectCategoryRequest{
  uint64 onboarding_id = 1;
  string category_name = 2;
}

message RetrieveSelectableCategoriesRequest {
  uint64 onboarding_id = 1;
}

message RetrieveSelectableCategoriesResponse {
  repeated Category categories = 1;
}

message Category {
  uint64 id = 1;
  string name = 2;

  uint64 parent_id = 3;
  repeated Category childs = 4;
}

message SwitchRoleRequest {
  string access_token = 1;
  string role = 2;
  string password = 3;
}

message SignOutRequest {
  string access_token = 1;
}

message ResetPasswordRequest {
  string token = 1;
  string password = 2;
}

message ForgotPasswordRequest {
  string email = 1;
}

message RetrieveOnboardingRequest {
  uint64 onboarding_id = 1;
}

message RetrieveOnboardingResponse{
  string role = 1;
  string email = 2;
  string name = 3;
  string surname = 4;
  int64 stage = 5;
}

message SignUpStartRequest {
  string role = 1;
}

message SignUpStartResponse{
  uint64 onboarding_id = 1;
}

message SignUpSharedRequest {
  uint64 onboarding_id = 1;
  string email = 2;
  string name = 3;
  string surname = 4;
}

message SignUpEndRequest{
  uint64 onboarding_id = 1;
  string password = 2;
}

message SignUpEndResponse {
  SignInUser user = 1;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  repeated SignInUser users = 1;
  uint64 sign_token_exp_ns = 7;

}

message SignInUser {
  uint64 id = 1;
  string sign_token = 2;
  string role = 3;
  string name = 4;
  string surname = 5;
  string email = 6;
}

message SignRequest {
  string sign_token = 1;
}

message SignResponse {
  string access_token = 1;
  string refresh_token = 2;

  uint64 access_token_exp_ns = 3;
  uint64 refresh_token_exp_ns = 4;
}


service Config {
  rpc ChangePassword (ChangePasswordRequest) returns (google.protobuf.Empty) {}
  rpc ChangeBasicInfo (ChangeBasicInfoRequest) returns (google.protobuf.Empty) {}
}

message ChangePasswordRequest {
  string access_token = 1;
  string old_password = 2;
  string new_password = 3;
}

message ChangeBasicInfoRequest {
  string access_token = 1;
  string name = 2;
  string surname = 3;
}

